<resources>
    <string name="app_name">AndellaChallenge1</string>
    <string name="action_settings">Settings</string>
    <string name="acl_button_text"> ABOUT ACL</string>
    <string name="profile_button_text">MY PROFILE</string>
    <string name="title_activity_my_profile">My Profile</string>
    <string name="title_activity_about_andela">About ACL</string>
    <string name="welcome_text_string">Welcome to ACL 4.0</string>
    <string name="app_toolbar_title_main_activity">ACL 4 Phase 1</string>
    <string name="text_title_about">THE ANDELA LEARNING COMMUNITY</string>
    <string name="text_about_andela_body">A community empowering the next  generation of African technology leaders.</string>
    <string name="join_us">Join us!</string>
    <string name="about_more_text">The Andela Learning Community is a network of people technologists and tech enthusiasts across Africa dedicated to learning how to use technology to solve humanity’s problems. The ALC facilitates your learning through the aid of guided mentorship from super awesome learning community ambassadors. Our goal is to provide an ever-growing population of aspiring technologists with the resources and environments they need to become world-class problem solvers.</string>
    <string name="my_name">Francis Peter Mariki</string>
    <string name="track_label">Track: Android</string>
    <string name="country_label">Country: Tanzania</string>
    <string name="email_label">Email: Frag.pm@gmail.com</string>
    <string name="phone_label">Phone: +255788644132</string>
    <string name="slack_label">Slack username: \@FrancisPeterMariki</string>
</resources>
