<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MyProfile"
    tools:showIn="@layout/activity_my_profile">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:text="@string/slack_label"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/track_label"
        app:layout_constraintVertical_bias="0.52" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:text="@string/phone_label"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/track_label"
        app:layout_constraintVertical_bias="0.322" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:layout_marginTop="8dp"
        android:text="@string/email_label"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/track_label"
        app:layout_constraintVertical_bias="0.159" />

    <ImageView
        android:id="@+id/my_picture"
        android:layout_width="240dp"
        android:layout_height="186dp"
        android:layout_marginBottom="420dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/francis" />

    <ImageView
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_picture"
        app:srcCompat="?attr/dividerHorizontal" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="@string/my_name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/my_picture" />

    <TextView
        android:id="@+id/track_label"
        android:layout_width="0dp"
        android:layout_height="21dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/track_label"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="21dp"
        android:layout_marginTop="8dp"
        android:text="@string/country_label"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/track_label"
        app:layout_constraintTop_toBottomOf="@+id/track_label"
        app:layout_constraintVertical_bias="0.024" />

</android.support.constraint.ConstraintLayout>