<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/about_acl_button"
        android:layout_width="162dp"
        android:layout_height="51dp"
        android:layout_marginTop="123dp"
        android:background="@color/andela_challenge_button_color"
        android:text="@string/acl_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text" />

    <Button
        android:id="@+id/profile_button"
        android:layout_width="156dp"
        android:layout_height="53dp"
        android:layout_marginTop="47dp"
        android:background="@color/andela_challenge_button_color"
        android:text="@string/profile_button_text"
        app:layout_constraintStart_toStartOf="@+id/about_acl_button"
        app:layout_constraintTop_toBottomOf="@+id/about_acl_button" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="67dp"
        android:text="@string/welcome_text_string"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>